fixed background not showing up error

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -10,3 +10,10 @@ body {
     background-color: transparent !important;
     background: inherit;
 }
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 5px;
+    background-color: #fff;
+}
